# that

./: CMakeLists.txt  LICENSE  README.md  compile_flags.txt  syntax-colors.sh
.github  /: FUNDING.yml
docs/: backend-specs.md  cli-specs.md  plugin-specs.md  syntax-specs.md
include/intern/: debug.h  diag_bag.h  str.h  utils.h
include/intern/parser/: node.h
include/thatlang/: globl.h  location.h
include/thatlang/diags/: bag.h  diag.h  span.h
include/thatlang/lexer/: lexer.h  token.h
include/thatlang/parser/: node.h  parser.h
src/: location.c
src/diags/: bag.c  diag.c  span.c
src/intern/: debug.c  str.c  utils.c
src/intern/parser/: node.c
src/lexer/: lexer.c  token.c
src/parser/: node.c  parser.c
tests/: check_lexer.c  check_parser.c  check_str.c  main.c  temp.c
